direction when the wind speed is zero.  Same for wind gust.

For WMR9x8 stations, wind chill is now retrieved from the console
rather than calculated in software. Thank you user Peter Ferencz!

For WMR9x8 stations, the first extra temperature sensor (packet code 4)
now shows up as extraTemp1 (instead of outTemp). Thanks again to 
Peter Ferencz.

The LOOP value for daily ET on Vantages was too high by a factor of 10. 
This has been corrected.

Fixed a bug that caused values of ET to be miscalculated when using
software record generation.

Ported to Korora 19 (Fedora 19). Thanks to user zmodemguru!

Plots under 16 hours in length, now use 1 hour increments (instead of 
3 hours).

Fixed rain units in ws28xx driver.

No longer emits "deprecation" warning when working with some versions
of the MySQLdb python driver.

Reduce logging verbosity when bad magic numbers appear on FineOffset
stations.  Log only when the numbers are unrecognized or change.
The purpose of the magic numbers is still unknown.


2.4.0 08/03/13

The configuration utility wee_config_vantage now allows you to set
DST to 'auto', 'off', or 'on'. It also lets you set either a time
zone code, or a time zone offset.

The service StdTimeSync now catches startup events and syncs the clock
on them. It has now been moved to the beginning of the list
"service_list" in weewx.conf. Users may want to do the same with their
old configuration file.

A new event, END_ARCHIVE_PERIOD has been added, signaling the end of
the archive period.

The LOOP packets emitted by the driver for the Davis Vantage series
now includes the max wind gust and direction seen since the beginning
of the current archive period.

Changed the null value from zero (which the Davis documentation specifies)
to 0x7fff for the VP2 type 'highRadiation'.

Archive record packets with date and time equal to zero or 0xff now
terminate dumps.

The code that picks a filename for "summary by" reports has now been